# MultiVarGauss

./: .gitignore  CMakeLists.txt  README.md
data/: grasp_clusters.csv  grasp_positions.json
include/: org_knowrob_gaussian_MixedGaussianInterface.h
include/mvg/: Dataset.hpp  JSON.h  KMeans.h  MixedGaussians.hpp  MultiVarGauss.hpp  Property.h
scripts/: calculate.sh  calculate_mixture.sh  calculate_multivar.sh  plot.sh  plot_heatmap.plt  plot_mixture.plt  plot_mixture2.plt  plot_multivar.plt  run.sh
src/: cluster_analysis.cpp  main.cpp  mixedgaussians.cpp  multivargauss.cpp  org_knowrob_gaussian_MixedGaussianInterface.cpp
src/mvg/: JSON.cpp  KMeans.cpp  Property.cpp
